--- a/index.html
+++ b/index.html
@@ -32,27 +32,51 @@
 
     <section id="products">
       <h2>Products</h2>
+      <ul class="product-cards">
+        <li class="hard-candy-card">
+          <div class="hard-candy-product-card-img">
+            <img src="images/placeholder-circle.svg" alt="circle">
+          </div>
+          <div class="hard-candy-product-card-body">
+            <h3>Hard Candy</h3>
+          </div>
+        </li>
 
-      <div class="hard-candy">
-        <h3>Hard Candy</h3>
-      </div>
+        <li class="sugarfree-candy-card">
+          <div class="sugarfree-candy-product-card-img">
+            <img src="images/placeholder-circle.svg" alt="circle">
+          </div>
+          <div class="sugarfree-candy-product-card-body">
+            <h3>Sugar-Free Candy</h3>
+          </div>
+        </li>
 
-      <div class="sugar-free-candy">
-        <h3>Sugar Free Candy</h3>
-      </div>
+        <li class="taff-candy-card">
+          <div class="taff-candy-product-card-img">
+            <img src="images/placeholder-circle.svg" alt="circle">
+          </div>
+          <div class="taffy-candy-product-card-body">
+            <h3>Taffy</h3>
+          </div>
+        </li>
 
-      <div class="taffy">
-        <h3>Taffy</h3>
-      </div>
+        <li class="gummy-candy-card">
+          <div class="gummy-candy-product-card-img">
+            <img src="images/placeholder-circle.svg" alt="circle">
+          </div>
+          <div class="gummy-candy-product-card-body">
+            <h3>Gummy Candy</h3>
+          </div>
+        </li>
 
-      <div class="gummy-candy">
-        <h3>Gummy Candy</h3>
-      </div>
-
-      <div class="sour-candy">
-        <h3>Sour Candy</h3>
-      </div>
-
+        <li class="sour-candy-card">
+          <div class="sour-candy-product-card-img">
+            <img src="images/placeholder-circle.svg" alt="circle">
+          </div>
+          <div class="sour-candy-product-card-body">
+            <h3>Sour Candy</h3>
+          </div>
+        </li>
     </section>
 
     <section id="promotions">
