Wrote the basic body copy for html.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="#promotions">Promotions</a></li>
         <li><a href="#about">About Us</a></li>
         <li><a href="#contact">Contact Us</a></li>
+        <li><a href="#hours">Store Hours</a></li>
       </ul>
     </nav>
   </header>
@@ -32,68 +33,205 @@
 
     <section id="products">
       <h2>Products</h2>
-      <ul class="product-cards">
-        <li class="hard-candy-card">
+        <a class="hard-candy-card">
           <div class="hard-candy-product-card-img">
             <img src="images/placeholder-circle.svg" alt="circle">
           </div>
           <div class="hard-candy-product-card-body">
             <h3>Hard Candy</h3>
           </div>
-        </li>
+        </a>
 
-        <li class="sugarfree-candy-card">
+        <a class="sugarfree-candy-card">
           <div class="sugarfree-candy-product-card-img">
             <img src="images/placeholder-circle.svg" alt="circle">
           </div>
           <div class="sugarfree-candy-product-card-body">
             <h3>Sugar-Free Candy</h3>
           </div>
-        </li>
+        </a>
 
-        <li class="taff-candy-card">
+        <a class="taff-candy-card">
           <div class="taff-candy-product-card-img">
             <img src="images/placeholder-circle.svg" alt="circle">
           </div>
           <div class="taffy-candy-product-card-body">
             <h3>Taffy</h3>
           </div>
-        </li>
+        </a>
 
-        <li class="gummy-candy-card">
+        <a class="gummy-candy-card">
           <div class="gummy-candy-product-card-img">
             <img src="images/placeholder-circle.svg" alt="circle">
           </div>
           <div class="gummy-candy-product-card-body">
             <h3>Gummy Candy</h3>
           </div>
-        </li>
+        </a>
 
-        <li class="sour-candy-card">
+        <a class="sour-candy-card">
           <div class="sour-candy-product-card-img">
             <img src="images/placeholder-circle.svg" alt="circle">
           </div>
           <div class="sour-candy-product-card-body">
             <h3>Sour Candy</h3>
           </div>
-        </li>
+        </a>
     </section>
 
     <section id="promotions">
       <h2>Promotions</h2>
+      <ul>
+        <li class="promo-card">
+          <div class="promo-card-img">
+            <img src="images/placeholder-circle.svg" alt="circle">
+          </div>
+          <div class="promo-card-body">
+            <h2>Monday Discount</h2>
+            <p>Every Monday we offer 10% off for students and seniors.</p>
+          </div>
+        </li>
+
+        <li class="promo-card">
+          <div class="promo-card-img">
+            <img src="images/placeholder-circle.svg" alt="circle">
+          </div>
+          <div class="promo-card-body">
+            <h2>Gift Baskets</h2>
+            <p>Have a special occassion coming up? Celebrate with a gift basket from Beau's Bonbons.</p>
+          </div>
+        </li>
+
+        <li class="promo-card">
+          <div class="promo-card-img">
+            <img src="images/placeholder-circle.svg" alt="circle">
+          </div>
+          <div class="promo-card-body">
+            <h2>Birthday Bonbons</h2>
+            <p>Beau's Bonbon's loves birthdays! Come in on your birthday for a complimentary bag of birthday bonbons.</p>
+          </div>
+        </li>
+
+      </ul>
     </section>
 
     <section id="about">
       <h2>About Us</h2>
+      <figure>
+        <img src="images/placeholder-3by2.svg" alt="beaus-family">
+        <figcaption>Beau family photo, 1995</figcaption>
+      </figure>
+      <div class="about-beaus">
+        <p>Beau's Bonbon's began as a simple dream to make delicious treats. Beau Brooks (or Big Beau) learned how to make candy from his mother, and his love for bonbons soon took over. Big Beau started Beau's Bonbons in 1995 out of his kitchen. What started as a small business, soon grew and Big Beau enlisted the help of his family and friends to help bring more candy to the people of Ottawa. Today Beau's Bonbons has expanded to three retail locations in Ottawa, and it supplies bonbons across Canada.</p>
+      </div>
+      <blockquote>"Great candy is my passion."<cite>-Beau Brooks</cite></blockquote>
+
     </section>
 
     <section id="contact">
       <h2>Contact Us</h2>
+      <div class="main">
+        <img src="images/placeholder-1by1.svg" alt="">
+        <h3>Central Location</h3>
+        <p>123 Main Street, Ottawa, Ontario K1R 2R3<p>
+        <p>613-123-4567</p>
+        <p>main@beausbonbons.ca</p>
+      </div>
+
+      <div class="west">
+        <img src="images/placeholder-1by1.svg" alt="">
+        <h3>West Location</h3>
+        <p>456 West Street, Ottawa, Ontario K4R 5R6</p>
+        <p>613-234-5678</p>
+        <p>west@beausbonbons.ca</p>
+      </div>
+
+      <div class="east">
+        <img src="images/placeholder-1by1.svg" alt="">
+        <h3>East Location</h3>
+        <p>789 East Street, Ottawa, Ontario K7R 8R9</p>
+        <p>613-345-6789</p>
+        <p>east@beausbonbons.ca</p>
+      </div>
+    </section>
+
+    <section id="hours">
+      <div class="main-hours">
+        <img src="images/placeholder-1by1.svg" alt="mainstore">
+        <h3>Main Location</h3>
+        <dl class="hours">
+          <dt>Monday:</dt>
+          <dd>10am-5pm</dd>
+          <dt>Tuesday:</dt>
+          <dd>10am-5pm</dd>
+          <dt>Wednesday:</dt>
+          <dd>10am-7pm</dd>
+          <dt>Thursday:</dt>
+          <dd>10am-9pm</dd>
+          <dt>Friday:</dt>
+          <dd>10am-9pm</dd>
+          <dt>Saturday:</dt>
+          <dd>9am-5pm</dd>
+          <dt>Sunday:</dt>
+          <dd>Closed</dd>
+        </dl>
+      </div>
+      <div class="west-hours">
+        <img src="images/placeholder-1by1.svg" alt="weststore">
+        <h3>West Location</h3>
+        <dl class="hours">
+          <dt>Monday:</dt>
+          <dd>11am-5pm</dd>
+          <dt>Tuesday:</dt>
+          <dd>11am-5pm</dd>
+          <dt>Wednesday:</dt>
+          <dd>11am-7pm</dd>
+          <dt>Thursday:</dt>
+          <dd>11am-9pm</dd>
+          <dt>Friday:</dt>
+          <dd>11am-9pm</dd>
+          <dt>Saturday:</dt>
+          <dd>10am-5pm</dd>
+          <dt>Sunday:</dt>
+          <dd>10am-5pm</dd>
+        </dl>
+      </div>
+      <div class="east-hours">
+        <img src="images/placeholder-1by1.svg" alt="eaststore">
+        <h3>East Location</h3>
+        <dl class="hours">
+          <dt>Monday:</dt>
+          <dd>11am-9pm</dd>
+          <dt>Tuesday:</dt>
+          <dd>11am-9pm</dd>
+          <dt>Wednesday:</dt>
+          <dd>11am-9pm</dd>
+          <dt>Thursday:</dt>
+          <dd>11am-9pm</dd>
+          <dt>Friday:</dt>
+          <dd>11am-9pm</dd>
+          <dt>Saturday:</dt>
+          <dd>10am-9pm</dd>
+          <dt>Sunday:</dt>
+          <dd>Closed</dd>
+        </dl>
+      </div>
     </section>
   </main>
 
   <footer>
-
+    <nav class="footer-nav">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#products">Products</a></li>
+        <li><a href="#promotions">Promotions</a></li>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#contact">Contact Us</a></li>
+        <li><a href="#hours">Store Hours</a></li>
+      </ul>
+    </nav>
+    <img src="images/placeholder-circle" alt="logo">
+    <p>Copyright (c) 2016 Copyright Holder All Rights Reserved.</p>
   </footer>
 </body>
 </html>
