Corrected html semantics issues.

--- a/index.html
+++ b/index.html
@@ -33,50 +33,50 @@
 
     <section id="products">
       <h2>Products</h2>
-        <a class="hard-candy-card">
-          <div class="hard-candy-product-card-img">
-            <img src="images/placeholder-circle.svg" alt="circle">
-          </div>
-          <div class="hard-candy-product-card-body">
-            <h3>Hard Candy</h3>
-          </div>
-        </a>
+      <a class="hard-candy-card">
+        <div class="hard-candy-product-card-img">
+          <img src="images/placeholder-circle.svg" alt="circle">
+        </div>
+        <div class="hard-candy-product-card-body">
+          <h3>Hard Candy</h3>
+        </div>
+      </a>
 
-        <a class="sugarfree-candy-card">
-          <div class="sugarfree-candy-product-card-img">
-            <img src="images/placeholder-circle.svg" alt="circle">
-          </div>
-          <div class="sugarfree-candy-product-card-body">
-            <h3>Sugar-Free Candy</h3>
-          </div>
-        </a>
+      <a class="sugarfree-candy-card">
+        <div class="sugarfree-candy-product-card-img">
+          <img src="images/placeholder-circle.svg" alt="circle">
+        </div>
+        <div class="sugarfree-candy-product-card-body">
+          <h3>Sugar-Free Candy</h3>
+        </div>
+      </a>
 
-        <a class="taff-candy-card">
-          <div class="taff-candy-product-card-img">
-            <img src="images/placeholder-circle.svg" alt="circle">
-          </div>
-          <div class="taffy-candy-product-card-body">
-            <h3>Taffy</h3>
-          </div>
-        </a>
+      <a class="taff-candy-card">
+        <div class="taff-candy-product-card-img">
+          <img src="images/placeholder-circle.svg" alt="circle">
+        </div>
+        <div class="taffy-candy-product-card-body">
+          <h3>Taffy</h3>
+        </div>
+      </a>
 
-        <a class="gummy-candy-card">
-          <div class="gummy-candy-product-card-img">
-            <img src="images/placeholder-circle.svg" alt="circle">
-          </div>
-          <div class="gummy-candy-product-card-body">
-            <h3>Gummy Candy</h3>
-          </div>
-        </a>
+      <a class="gummy-candy-card">
+        <div class="gummy-candy-product-card-img">
+          <img src="images/placeholder-circle.svg" alt="circle">
+        </div>
+        <div class="gummy-candy-product-card-body">
+          <h3>Gummy Candy</h3>
+        </div>
+      </a>
 
-        <a class="sour-candy-card">
-          <div class="sour-candy-product-card-img">
-            <img src="images/placeholder-circle.svg" alt="circle">
-          </div>
-          <div class="sour-candy-product-card-body">
-            <h3>Sour Candy</h3>
-          </div>
-        </a>
+      <a class="sour-candy-card">
+        <div class="sour-candy-product-card-img">
+          <img src="images/placeholder-circle.svg" alt="circle">
+        </div>
+        <div class="sour-candy-product-card-body">
+          <h3>Sour Candy</h3>
+        </div>
+      </a>
     </section>
 
     <section id="promotions">
@@ -133,7 +133,7 @@
       <div class="main">
         <img src="images/placeholder-1by1.svg" alt="">
         <h3>Central Location</h3>
-        <p>123 Main Street, Ottawa, Ontario K1R 2R3<p>
+        <p>123 Main Street, Ottawa, Ontario K1R 2R3</p>
         <p>613-123-4567</p>
         <p>main@beausbonbons.ca</p>
       </div>
