--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
 
   <main>
-    <section id="home">
+    <section id="home" class="home">
       <h2>Home</h2>
       <img src="images/placeholder-4by1.svg" alt="home-picture">
       <p>Welcome to Beau's Bonbons. We are a family-run, local business that has been operating in Ottawa since 1995. We are Ottawa's home for specialty, homemade candies and treats. Please visit us at any one of our three locations, where are we are proud to serve up a wide variety of delightful, delicious, and gourmet goodies.</p>
@@ -87,7 +87,7 @@
             <img src="images/placeholder-circle.svg" alt="circle">
           </div>
           <div class="promo-card-body">
-            <h2>Monday Discount</h2>
+            <h3>Monday Discount</h3>
             <p>Every Monday we offer 10% off for students and seniors.</p>
           </div>
         </li>
@@ -97,7 +97,7 @@
             <img src="images/placeholder-circle.svg" alt="circle">
           </div>
           <div class="promo-card-body">
-            <h2>Gift Baskets</h2>
+            <h3>Gift Baskets</h3>
             <p>Have a special occassion coming up? Celebrate with a gift basket from Beau's Bonbons.</p>
           </div>
         </li>
@@ -107,7 +107,7 @@
             <img src="images/placeholder-circle.svg" alt="circle">
           </div>
           <div class="promo-card-body">
-            <h2>Birthday Bonbons</h2>
+            <h3>Birthday Bonbons</h3>
             <p>Beau's Bonbon's loves birthdays! Come in on your birthday for a complimentary bag of birthday bonbons.</p>
           </div>
         </li>
@@ -220,16 +220,6 @@
   </main>
 
   <footer>
-    <nav class="footer-nav">
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#products">Products</a></li>
-        <li><a href="#promotions">Promotions</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#contact">Contact Us</a></li>
-        <li><a href="#hours">Store Hours</a></li>
-      </ul>
-    </nav>
     <img src="images/placeholder-circle" alt="logo">
     <p>Copyright (c) 2016 Copyright Holder All Rights Reserved.</p>
   </footer>
