--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="images/placeholder-circle.svg" alt="main-logo">
     <h1>Beau's Bonbons</h1>
     <nav>
-      <ul>
+      <ul class="nav">
         <li><a href="#home">Home</a></li>
         <li><a href="#products">Products</a></li>
         <li><a href="#promotions">Promotions</a></li>
