--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
   </main>
 
   <footer>
-    <img src="images/placeholder-circle" alt="logo">
+    <img src="images/placeholder-circle.svg" alt="logo">
     <p>Copyright (c) 2016 Copyright Holder All Rights Reserved.</p>
   </footer>
 </body>
