--- a/index.html
+++ b/index.html
@@ -25,61 +25,52 @@
   </header>
 
   <main>
-    <section id="home" class="home">
+    <section class="home-section" id="home">
       <h2>Home</h2>
-      <img src="images/placeholder-4by1.svg" alt="home-picture">
+      <img class="home-img" src="images/placeholder-3by2.svg" alt="home-picture">
       <p>Welcome to Beau's Bonbons. We are a family-run, local business that has been operating in Ottawa since 1995. We are Ottawa's home for specialty, homemade candies and treats. Please visit us at any one of our three locations, where are we are proud to serve up a wide variety of delightful, delicious, and gourmet goodies.</p>
     </section>
 
-    <section id="products">
+    <section class="products-section" id="products">
       <h2>Products</h2>
-      <a class="hard-candy-card">
-        <div class="hard-candy-product-card-img">
-          <img src="images/placeholder-circle.svg" alt="circle">
-        </div>
-        <div class="hard-candy-product-card-body">
-          <h3>Hard Candy</h3>
+      <a href="#" class="hard-candy-card">
+        <div class="product-body">
+          <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
+          <h3 class="product-card-body">Hard Candy</h3>
         </div>
       </a>
 
-      <a class="sugarfree-candy-card">
-        <div class="sugarfree-candy-product-card-img">
-          <img src="images/placeholder-circle.svg" alt="circle">
-        </div>
-        <div class="sugarfree-candy-product-card-body">
-          <h3>Sugar-Free Candy</h3>
+      <a href="#" class="sugarfree-candy-card">
+        <div class="product-body">
+          <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
+          <h3 class="product-card-body">Sugar-Free Candy</h3>
         </div>
       </a>
 
-      <a class="taff-candy-card">
-        <div class="taff-candy-product-card-img">
-          <img src="images/placeholder-circle.svg" alt="circle">
-        </div>
-        <div class="taffy-candy-product-card-body">
-          <h3>Taffy</h3>
+      <a href="#" class="taff-candy-card">
+        <div class="product-body">
+          <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
+          <h3 class="product-card-body">Taffy</h3>
         </div>
       </a>
 
-      <a class="gummy-candy-card">
-        <div class="gummy-candy-product-card-img">
-          <img src="images/placeholder-circle.svg" alt="circle">
-        </div>
-        <div class="gummy-candy-product-card-body">
-          <h3>Gummy Candy</h3>
+      <a href="#" class="gummy-candy-card">
+        <div class="product-body">
+          <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
+          <h3 class="product-card-body">Gummy Candy</h3>
         </div>
       </a>
 
-      <a class="sour-candy-card">
-        <div class="sour-candy-product-card-img">
-          <img src="images/placeholder-circle.svg" alt="circle">
+      <a href="#" class="sour-candy-card">
+        <div class="product-body">
+          <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
+          <h3 class="product-card-body">Sour Candy</h3>
         </div>
-        <div class="sour-candy-product-card-body">
-          <h3>Sour Candy</h3>
-        </div>
+
       </a>
     </section>
 
-    <section id="promotions">
+    <section class="promotions-section" id="promotions">
       <h2>Promotions</h2>
       <ul>
         <li class="promo-card">
@@ -115,7 +106,7 @@
       </ul>
     </section>
 
-    <section id="about">
+    <section class="about-section" id="about">
       <h2>About Us</h2>
       <figure>
         <img src="images/placeholder-3by2.svg" alt="beaus-family">
@@ -128,7 +119,7 @@
 
     </section>
 
-    <section id="contact">
+    <section class="contact-section" id="contact">
       <h2>Contact Us</h2>
       <div class="main">
         <img src="images/placeholder-1by1.svg" alt="">
@@ -155,7 +146,7 @@
       </div>
     </section>
 
-    <section id="hours">
+    <section class="hours-section" id="hours">
       <div class="main-hours">
         <img src="images/placeholder-1by1.svg" alt="mainstore">
         <h3>Main Location</h3>
