Styled the promotions section.

--- a/index.html
+++ b/index.html
@@ -72,11 +72,9 @@
 
     <section class="promotions-section" id="promotions">
       <h2>Promotions</h2>
-      <ul>
+      <ul class="promo-list">
         <li class="promo-card">
-          <div class="promo-card-img">
-            <img src="images/placeholder-circle.svg" alt="circle">
-          </div>
+          <img class="promo-card-img" src="images/placeholder-circle.svg" alt="circle">
           <div class="promo-card-body">
             <h3>Monday Discount</h3>
             <p>Every Monday we offer 10% off for students and seniors.</p>
@@ -84,9 +82,7 @@
         </li>
 
         <li class="promo-card">
-          <div class="promo-card-img">
-            <img src="images/placeholder-circle.svg" alt="circle">
-          </div>
+          <img class="promo-card-img" src="images/placeholder-circle.svg" alt="circle">
           <div class="promo-card-body">
             <h3>Gift Baskets</h3>
             <p>Have a special occassion coming up? Celebrate with a gift basket from Beau's Bonbons.</p>
@@ -94,9 +90,7 @@
         </li>
 
         <li class="promo-card">
-          <div class="promo-card-img">
-            <img src="images/placeholder-circle.svg" alt="circle">
-          </div>
+          <img class="promo-card-img" src="images/placeholder-circle.svg" alt="circle">
           <div class="promo-card-body">
             <h3>Birthday Bonbons</h3>
             <p>Beau's Bonbon's loves birthdays! Come in on your birthday for a complimentary bag of birthday bonbons.</p>
