Styled the "About Us" section.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="about-beaus">
         <p>Beau's Bonbon's began as a simple dream to make delicious treats. Beau Brooks (or Big Beau) learned how to make candy from his mother, and his love for bonbons soon took over. Big Beau started Beau's Bonbons in 1995 out of his kitchen. What started as a small business, soon grew and Big Beau enlisted the help of his family and friends to help bring more candy to the people of Ottawa. Today Beau's Bonbons has expanded to three retail locations in Ottawa, and it supplies bonbons across Canada.</p>
       </div>
-      <blockquote>"Great candy is my passion."<cite>-Beau Brooks</cite></blockquote>
+      <blockquote>"Great candy is my passion."<br><cite>-Beau Brooks</cite></blockquote>
 
     </section>
 
