Styled "Hours" section.

--- a/index.html
+++ b/index.html
@@ -116,90 +116,97 @@
     <section class="contact-section" id="contact">
       <h2>Contact Us</h2>
       <div class="main">
-        <img src="images/placeholder-1by1.svg" alt="">
+        <img class="location-img" src="images/placeholder-1by1.svg" alt="">
         <h3>Central Location</h3>
-        <p>123 Main Street, Ottawa, Ontario K1R 2R3</p>
+        <p>123 Main Street<br>Ottawa, Ontario K1R 2R3</p>
         <p>613-123-4567</p>
         <p>main@beausbonbons.ca</p>
       </div>
 
       <div class="west">
-        <img src="images/placeholder-1by1.svg" alt="">
+        <img class="location-img" src="images/placeholder-1by1.svg" alt="">
         <h3>West Location</h3>
-        <p>456 West Street, Ottawa, Ontario K4R 5R6</p>
+        <p>456 West Street<br>Ottawa, Ontario K4R 5R6</p>
         <p>613-234-5678</p>
         <p>west@beausbonbons.ca</p>
       </div>
 
       <div class="east">
-        <img src="images/placeholder-1by1.svg" alt="">
+        <img class="location-img" src="images/placeholder-1by1.svg" alt="">
         <h3>East Location</h3>
-        <p>789 East Street, Ottawa, Ontario K7R 8R9</p>
+        <p>789 East Street<br>Ottawa, Ontario K7R 8R9</p>
         <p>613-345-6789</p>
         <p>east@beausbonbons.ca</p>
       </div>
     </section>
 
     <section class="hours-section" id="hours">
+      <h2>Store Hours</h2>
       <div class="main-hours">
-        <img src="images/placeholder-1by1.svg" alt="mainstore">
-        <h3>Main Location</h3>
-        <dl class="hours">
-          <dt>Monday:</dt>
-          <dd>10am-5pm</dd>
-          <dt>Tuesday:</dt>
-          <dd>10am-5pm</dd>
-          <dt>Wednesday:</dt>
-          <dd>10am-7pm</dd>
-          <dt>Thursday:</dt>
-          <dd>10am-9pm</dd>
-          <dt>Friday:</dt>
-          <dd>10am-9pm</dd>
-          <dt>Saturday:</dt>
-          <dd>9am-5pm</dd>
-          <dt>Sunday:</dt>
-          <dd>Closed</dd>
-        </dl>
+        <img class="hours-img" src="images/placeholder-1by1.svg" alt="mainstore">
+        <div class="hours">
+          <h3>Main Location</h3>
+          <dl>
+            <dt>Monday:</dt>
+            <dd>10am-5pm</dd>
+            <dt>Tuesday:</dt>
+            <dd>10am-5pm</dd>
+            <dt>Wednesday:</dt>
+            <dd>10am-7pm</dd>
+            <dt>Thursday:</dt>
+            <dd>10am-9pm</dd>
+            <dt>Friday:</dt>
+            <dd>10am-9pm</dd>
+            <dt>Saturday:</dt>
+            <dd>9am-5pm</dd>
+            <dt>Sunday:</dt>
+            <dd>Closed</dd>
+          </dl>
+        </div>
       </div>
       <div class="west-hours">
-        <img src="images/placeholder-1by1.svg" alt="weststore">
-        <h3>West Location</h3>
-        <dl class="hours">
-          <dt>Monday:</dt>
-          <dd>11am-5pm</dd>
-          <dt>Tuesday:</dt>
-          <dd>11am-5pm</dd>
-          <dt>Wednesday:</dt>
-          <dd>11am-7pm</dd>
-          <dt>Thursday:</dt>
-          <dd>11am-9pm</dd>
-          <dt>Friday:</dt>
-          <dd>11am-9pm</dd>
-          <dt>Saturday:</dt>
-          <dd>10am-5pm</dd>
-          <dt>Sunday:</dt>
-          <dd>10am-5pm</dd>
-        </dl>
+        <img class="hours-img" src="images/placeholder-1by1.svg" alt="weststore">
+        <div class="hours">
+          <h3>West Location</h3>
+          <dl>
+            <dt>Monday:</dt>
+            <dd>11am-5pm</dd>
+            <dt>Tuesday:</dt>
+            <dd>11am-5pm</dd>
+            <dt>Wednesday:</dt>
+            <dd>11am-7pm</dd>
+            <dt>Thursday:</dt>
+            <dd>11am-9pm</dd>
+            <dt>Friday:</dt>
+            <dd>11am-9pm</dd>
+            <dt>Saturday:</dt>
+            <dd>10am-5pm</dd>
+            <dt>Sunday:</dt>
+            <dd>10am-5pm</dd>
+          </dl>
+        </div>
       </div>
       <div class="east-hours">
-        <img src="images/placeholder-1by1.svg" alt="eaststore">
-        <h3>East Location</h3>
-        <dl class="hours">
-          <dt>Monday:</dt>
-          <dd>11am-9pm</dd>
-          <dt>Tuesday:</dt>
-          <dd>11am-9pm</dd>
-          <dt>Wednesday:</dt>
-          <dd>11am-9pm</dd>
-          <dt>Thursday:</dt>
-          <dd>11am-9pm</dd>
-          <dt>Friday:</dt>
-          <dd>11am-9pm</dd>
-          <dt>Saturday:</dt>
-          <dd>10am-9pm</dd>
-          <dt>Sunday:</dt>
-          <dd>Closed</dd>
-        </dl>
+        <img class="hours-img" src="images/placeholder-1by1.svg" alt="eaststore">
+        <div class="hours">
+          <h3>East Location</h3>
+          <dl>
+            <dt>Monday:</dt>
+            <dd>11am-9pm</dd>
+            <dt>Tuesday:</dt>
+            <dd>11am-9pm</dd>
+            <dt>Wednesday:</dt>
+            <dd>11am-9pm</dd>
+            <dt>Thursday:</dt>
+            <dd>11am-9pm</dd>
+            <dt>Friday:</dt>
+            <dd>11am-9pm</dd>
+            <dt>Saturday:</dt>
+            <dd>10am-9pm</dd>
+            <dt>Sunday:</dt>
+            <dd>Closed</dd>
+          </dl>
+        </div>
       </div>
     </section>
   </main>
