--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
       </a>
 
-      <a href="#" class="taff-candy-card">
+      <a href="#" class="taffy-candy-card">
         <div class="product-body">
           <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
           <h3 class="product-card-body">Taffy</h3>
@@ -67,6 +67,11 @@
           <h3 class="product-card-body">Sour Candy</h3>
         </div>
 
+      <a href="#" class="lollypop-candy-card">
+        <div class="product-body">
+          <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
+          <h3 class="product-card-body">Lollipops</h3>
+        </div>
       </a>
     </section>
 
@@ -117,26 +122,32 @@
       <h2>Contact Us</h2>
       <div class="main">
         <img class="location-img" src="images/placeholder-1by1.svg" alt="">
-        <h3>Central Location</h3>
-        <p>123 Main Street<br>Ottawa, Ontario K1R 2R3</p>
-        <p>613-123-4567</p>
-        <p>main@beausbonbons.ca</p>
+        <div class="contact-body">
+          <h3>Central Location</h3>
+          <p>123 Main Street<br>Ottawa, Ontario K1R 2R3</p>
+          <p>613-123-4567</p>
+          <p>main@beausbonbons.ca</p>
+        </div>
       </div>
 
       <div class="west">
         <img class="location-img" src="images/placeholder-1by1.svg" alt="">
-        <h3>West Location</h3>
-        <p>456 West Street<br>Ottawa, Ontario K4R 5R6</p>
-        <p>613-234-5678</p>
-        <p>west@beausbonbons.ca</p>
+        <div class="contact-body">
+          <h3>West Location</h3>
+          <p>456 West Street<br>Ottawa, Ontario K4R 5R6</p>
+          <p>613-234-5678</p>
+          <p>west@beausbonbons.ca</p>
+        </div>
       </div>
 
       <div class="east">
         <img class="location-img" src="images/placeholder-1by1.svg" alt="">
-        <h3>East Location</h3>
-        <p>789 East Street<br>Ottawa, Ontario K7R 8R9</p>
-        <p>613-345-6789</p>
-        <p>east@beausbonbons.ca</p>
+        <div class="contact-body">
+          <h3>East Location</h3>
+          <p>789 East Street<br>Ottawa, Ontario K7R 8R9</p>
+          <p>613-345-6789</p>
+          <p>east@beausbonbons.ca</p>
+        </div>
       </div>
     </section>
 
