Fixed the styling so that it looks good in between the standard media query sizes.

--- a/index.html
+++ b/index.html
@@ -33,41 +33,41 @@
 
     <section class="products-section" id="products">
       <h2>Products</h2>
-      <a href="#" class="hard-candy-card">
+      <a href="#" class="hard-candy-card candy-card">
         <div class="product-body">
           <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
           <h3 class="product-card-body">Hard Candy</h3>
         </div>
       </a>
 
-      <a href="#" class="sugarfree-candy-card">
+      <a href="#" class="sugarfree-candy-card candy-card">
         <div class="product-body">
           <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
           <h3 class="product-card-body">Sugar-Free Candy</h3>
         </div>
       </a>
 
-      <a href="#" class="taffy-candy-card">
+      <a href="#" class="taffy-candy-card candy-card">
         <div class="product-body">
           <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
           <h3 class="product-card-body">Taffy</h3>
         </div>
       </a>
 
-      <a href="#" class="gummy-candy-card">
+      <a href="#" class="gummy-candy-card candy-card">
         <div class="product-body">
           <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
           <h3 class="product-card-body">Gummy Candy</h3>
         </div>
       </a>
 
-      <a href="#" class="sour-candy-card">
+      <a href="#" class="sour-candy-card candy-card">
         <div class="product-body">
           <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
           <h3 class="product-card-body">Sour Candy</h3>
         </div>
 
-      <a href="#" class="lollypop-candy-card">
+      <a href="#" class="lollypop-candy-card candy-card">
         <div class="product-body">
           <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
           <h3 class="product-card-body">Lollipops</h3>
@@ -154,69 +154,75 @@
     <section class="hours-section" id="hours">
       <h2>Store Hours</h2>
       <div class="main-hours">
-        <img class="hours-img" src="images/placeholder-1by1.svg" alt="mainstore">
-        <div class="hours">
-          <h3>Main Location</h3>
-          <dl>
-            <dt>Monday:</dt>
-            <dd>10am-5pm</dd>
-            <dt>Tuesday:</dt>
-            <dd>10am-5pm</dd>
-            <dt>Wednesday:</dt>
-            <dd>10am-7pm</dd>
-            <dt>Thursday:</dt>
-            <dd>10am-9pm</dd>
-            <dt>Friday:</dt>
-            <dd>10am-9pm</dd>
-            <dt>Saturday:</dt>
-            <dd>9am-5pm</dd>
-            <dt>Sunday:</dt>
-            <dd>Closed</dd>
-          </dl>
+        <div class="hours-card">
+          <img class="hours-img" src="images/placeholder-1by1.svg" alt="mainstore">
+          <div class="hours">
+            <h3>Main Location</h3>
+            <dl>
+              <dt>Monday:</dt>
+              <dd>10am-5pm</dd>
+              <dt>Tuesday:</dt>
+              <dd>10am-5pm</dd>
+              <dt>Wednesday:</dt>
+              <dd>10am-7pm</dd>
+              <dt>Thursday:</dt>
+              <dd>10am-9pm</dd>
+              <dt>Friday:</dt>
+              <dd>10am-9pm</dd>
+              <dt>Saturday:</dt>
+              <dd>9am-5pm</dd>
+              <dt>Sunday:</dt>
+              <dd>Closed</dd>
+            </dl>
+          </div>
         </div>
       </div>
       <div class="west-hours">
-        <img class="hours-img" src="images/placeholder-1by1.svg" alt="weststore">
-        <div class="hours">
-          <h3>West Location</h3>
-          <dl>
-            <dt>Monday:</dt>
-            <dd>11am-5pm</dd>
-            <dt>Tuesday:</dt>
-            <dd>11am-5pm</dd>
-            <dt>Wednesday:</dt>
-            <dd>11am-7pm</dd>
-            <dt>Thursday:</dt>
-            <dd>11am-9pm</dd>
-            <dt>Friday:</dt>
-            <dd>11am-9pm</dd>
-            <dt>Saturday:</dt>
-            <dd>10am-5pm</dd>
-            <dt>Sunday:</dt>
-            <dd>10am-5pm</dd>
-          </dl>
+        <div class="hours-card">
+          <img class="hours-img" src="images/placeholder-1by1.svg" alt="weststore">
+          <div class="hours">
+            <h3>West Location</h3>
+            <dl>
+              <dt>Monday:</dt>
+              <dd>11am-5pm</dd>
+              <dt>Tuesday:</dt>
+              <dd>11am-5pm</dd>
+              <dt>Wednesday:</dt>
+              <dd>11am-7pm</dd>
+              <dt>Thursday:</dt>
+              <dd>11am-9pm</dd>
+              <dt>Friday:</dt>
+              <dd>11am-9pm</dd>
+              <dt>Saturday:</dt>
+              <dd>10am-5pm</dd>
+              <dt>Sunday:</dt>
+              <dd>10am-5pm</dd>
+            </dl>
+          </div>
         </div>
       </div>
       <div class="east-hours">
-        <img class="hours-img" src="images/placeholder-1by1.svg" alt="eaststore">
-        <div class="hours">
-          <h3>East Location</h3>
-          <dl>
-            <dt>Monday:</dt>
-            <dd>11am-9pm</dd>
-            <dt>Tuesday:</dt>
-            <dd>11am-9pm</dd>
-            <dt>Wednesday:</dt>
-            <dd>11am-9pm</dd>
-            <dt>Thursday:</dt>
-            <dd>11am-9pm</dd>
-            <dt>Friday:</dt>
-            <dd>11am-9pm</dd>
-            <dt>Saturday:</dt>
-            <dd>10am-9pm</dd>
-            <dt>Sunday:</dt>
-            <dd>Closed</dd>
-          </dl>
+        <div class="hours-card">
+          <img class="hours-img" src="images/placeholder-1by1.svg" alt="eaststore">
+          <div class="hours">
+            <h3>East Location</h3>
+            <dl>
+              <dt>Monday:</dt>
+              <dd>11am-9pm</dd>
+              <dt>Tuesday:</dt>
+              <dd>11am-9pm</dd>
+              <dt>Wednesday:</dt>
+              <dd>11am-9pm</dd>
+              <dt>Thursday:</dt>
+              <dd>11am-9pm</dd>
+              <dt>Friday:</dt>
+              <dd>11am-9pm</dd>
+              <dt>Saturday:</dt>
+              <dd>10am-9pm</dd>
+              <dt>Sunday:</dt>
+              <dd>Closed</dd>
+            </dl>
+          </div>
         </div>
       </div>
     </section>
