Changed the text-align: centre on Contact Us section at 38em media query.

--- a/index.html
+++ b/index.html
@@ -120,33 +120,35 @@
 
     <section class="contact-section" id="contact">
       <h2>Contact Us</h2>
-      <div class="main">
-        <img class="location-img" src="images/placeholder-1by1.svg" alt="">
-        <div class="contact-body">
-          <h3>Central Location</h3>
-          <p>123 Main Street<br>Ottawa, Ontario K1R 2R3</p>
-          <p>613-123-4567</p>
-          <p>main@beausbonbons.ca</p>
+      <div class="contact-section-body">
+        <div class="main">
+          <img class="location-img" src="images/placeholder-1by1.svg" alt="">
+          <div class="contact-body">
+            <h3>Central Location</h3>
+            <p>123 Main Street<br>Ottawa, Ontario K1R 2R3</p>
+            <p>613-123-4567</p>
+            <p>main@beausbonbons.ca</p>
+          </div>
         </div>
-      </div>
 
-      <div class="west">
-        <img class="location-img" src="images/placeholder-1by1.svg" alt="">
-        <div class="contact-body">
-          <h3>West Location</h3>
-          <p>456 West Street<br>Ottawa, Ontario K4R 5R6</p>
-          <p>613-234-5678</p>
-          <p>west@beausbonbons.ca</p>
+        <div class="west">
+          <img class="location-img" src="images/placeholder-1by1.svg" alt="">
+          <div class="contact-body">
+            <h3>West Location</h3>
+            <p>456 West Street<br>Ottawa, Ontario K4R 5R6</p>
+            <p>613-234-5678</p>
+            <p>west@beausbonbons.ca</p>
+          </div>
         </div>
-      </div>
 
-      <div class="east">
-        <img class="location-img" src="images/placeholder-1by1.svg" alt="">
-        <div class="contact-body">
-          <h3>East Location</h3>
-          <p>789 East Street<br>Ottawa, Ontario K7R 8R9</p>
-          <p>613-345-6789</p>
-          <p>east@beausbonbons.ca</p>
+        <div class="east">
+          <img class="location-img" src="images/placeholder-1by1.svg" alt="">
+          <div class="contact-body">
+            <h3>East Location</h3>
+            <p>789 East Street<br>Ottawa, Ontario K7R 8R9</p>
+            <p>613-345-6789</p>
+            <p>east@beausbonbons.ca</p>
+          </div>
         </div>
       </div>
     </section>
