Styled the 60em media query.

--- a/index.html
+++ b/index.html
@@ -33,46 +33,49 @@
 
     <section class="products-section" id="products">
       <h2>Products</h2>
-      <a href="#" class="hard-candy-card candy-card">
-        <div class="product-body">
-          <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
-          <h3 class="product-card-body">Hard Candy</h3>
-        </div>
-      </a>
+      <div class="card-wrapper">
+        <a href="#" class="hard-candy-card candy-card">
+          <div class="product-body">
+            <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
+            <h3 class="product-card-body">Hard Candy</h3>
+          </div>
+        </a>
 
-      <a href="#" class="sugarfree-candy-card candy-card">
-        <div class="product-body">
-          <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
-          <h3 class="product-card-body">Sugar-Free Candy</h3>
-        </div>
-      </a>
+        <a href="#" class="sugarfree-candy-card candy-card">
+          <div class="product-body">
+            <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
+            <h3 class="product-card-body">Sugar-Free Candy</h3>
+          </div>
+        </a>
 
-      <a href="#" class="taffy-candy-card candy-card">
-        <div class="product-body">
-          <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
-          <h3 class="product-card-body">Taffy</h3>
-        </div>
-      </a>
+        <a href="#" class="taffy-candy-card candy-card">
+          <div class="product-body">
+            <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
+            <h3 class="product-card-body">Taffy</h3>
+          </div>
+        </a>
 
-      <a href="#" class="gummy-candy-card candy-card">
-        <div class="product-body">
-          <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
-          <h3 class="product-card-body">Gummy Candy</h3>
-        </div>
-      </a>
+        <a href="#" class="gummy-candy-card candy-card">
+          <div class="product-body">
+            <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
+            <h3 class="product-card-body">Gummy Candy</h3>
+          </div>
+        </a>
 
-      <a href="#" class="sour-candy-card candy-card">
-        <div class="product-body">
-          <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
-          <h3 class="product-card-body">Sour Candy</h3>
-        </div>
+        <a href="#" class="sour-candy-card candy-card">
+          <div class="product-body">
+            <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
+            <h3 class="product-card-body">Sour Candy</h3>
+          </div>
+        </a>
 
-      <a href="#" class="lollypop-candy-card candy-card">
-        <div class="product-body">
-          <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
-          <h3 class="product-card-body">Lollipops</h3>
-        </div>
-      </a>
+        <a href="#" class="lollypop-candy-card candy-card">
+          <div class="product-body">
+            <img class="product-card-img" src="images/placeholder-1by1.svg" alt="circle">
+            <h3 class="product-card-body">Lollipops</h3>
+          </div>
+        </a>
+      </div>
     </section>
 
     <section class="promotions-section" id="promotions">
