Styled 90em media query.

--- a/index.html
+++ b/index.html
@@ -158,75 +158,77 @@
 
     <section class="hours-section" id="hours">
       <h2>Store Hours</h2>
-      <div class="main-hours">
-        <div class="hours-card">
-          <img class="hours-img" src="images/placeholder-1by1.svg" alt="mainstore">
-          <div class="hours">
-            <h3>Main Location</h3>
-            <dl>
-              <dt>Monday:</dt>
-              <dd>10am-5pm</dd>
-              <dt>Tuesday:</dt>
-              <dd>10am-5pm</dd>
-              <dt>Wednesday:</dt>
-              <dd>10am-7pm</dd>
-              <dt>Thursday:</dt>
-              <dd>10am-9pm</dd>
-              <dt>Friday:</dt>
-              <dd>10am-9pm</dd>
-              <dt>Saturday:</dt>
-              <dd>9am-5pm</dd>
-              <dt>Sunday:</dt>
-              <dd>Closed</dd>
-            </dl>
+      <div class="hours-wrapper">
+        <div class="main-hours">
+          <div class="hours-card">
+            <img class="hours-img" src="images/placeholder-1by1.svg" alt="mainstore">
+            <div class="hours">
+              <h3>Main Location</h3>
+              <dl>
+                <dt>Monday:</dt>
+                <dd>10am-5pm</dd>
+                <dt>Tuesday:</dt>
+                <dd>10am-5pm</dd>
+                <dt>Wednesday:</dt>
+                <dd>10am-7pm</dd>
+                <dt>Thursday:</dt>
+                <dd>10am-9pm</dd>
+                <dt>Friday:</dt>
+                <dd>10am-9pm</dd>
+                <dt>Saturday:</dt>
+                <dd>9am-5pm</dd>
+                <dt>Sunday:</dt>
+                <dd>Closed</dd>
+              </dl>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="west-hours">
-        <div class="hours-card">
-          <img class="hours-img" src="images/placeholder-1by1.svg" alt="weststore">
-          <div class="hours">
-            <h3>West Location</h3>
-            <dl>
-              <dt>Monday:</dt>
-              <dd>11am-5pm</dd>
-              <dt>Tuesday:</dt>
-              <dd>11am-5pm</dd>
-              <dt>Wednesday:</dt>
-              <dd>11am-7pm</dd>
-              <dt>Thursday:</dt>
-              <dd>11am-9pm</dd>
-              <dt>Friday:</dt>
-              <dd>11am-9pm</dd>
-              <dt>Saturday:</dt>
-              <dd>10am-5pm</dd>
-              <dt>Sunday:</dt>
-              <dd>10am-5pm</dd>
-            </dl>
+        <div class="west-hours">
+          <div class="hours-card">
+            <img class="hours-img" src="images/placeholder-1by1.svg" alt="weststore">
+            <div class="hours">
+              <h3>West Location</h3>
+              <dl>
+                <dt>Monday:</dt>
+                <dd>11am-5pm</dd>
+                <dt>Tuesday:</dt>
+                <dd>11am-5pm</dd>
+                <dt>Wednesday:</dt>
+                <dd>11am-7pm</dd>
+                <dt>Thursday:</dt>
+                <dd>11am-9pm</dd>
+                <dt>Friday:</dt>
+                <dd>11am-9pm</dd>
+                <dt>Saturday:</dt>
+                <dd>10am-5pm</dd>
+                <dt>Sunday:</dt>
+                <dd>10am-5pm</dd>
+              </dl>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="east-hours">
-        <div class="hours-card">
-          <img class="hours-img" src="images/placeholder-1by1.svg" alt="eaststore">
-          <div class="hours">
-            <h3>East Location</h3>
-            <dl>
-              <dt>Monday:</dt>
-              <dd>11am-9pm</dd>
-              <dt>Tuesday:</dt>
-              <dd>11am-9pm</dd>
-              <dt>Wednesday:</dt>
-              <dd>11am-9pm</dd>
-              <dt>Thursday:</dt>
-              <dd>11am-9pm</dd>
-              <dt>Friday:</dt>
-              <dd>11am-9pm</dd>
-              <dt>Saturday:</dt>
-              <dd>10am-9pm</dd>
-              <dt>Sunday:</dt>
-              <dd>Closed</dd>
-            </dl>
+        <div class="east-hours">
+          <div class="hours-card">
+            <img class="hours-img" src="images/placeholder-1by1.svg" alt="eaststore">
+            <div class="hours">
+              <h3>East Location</h3>
+              <dl>
+                <dt>Monday:</dt>
+                <dd>11am-9pm</dd>
+                <dt>Tuesday:</dt>
+                <dd>11am-9pm</dd>
+                <dt>Wednesday:</dt>
+                <dd>11am-9pm</dd>
+                <dt>Thursday:</dt>
+                <dd>11am-9pm</dd>
+                <dt>Friday:</dt>
+                <dd>11am-9pm</dd>
+                <dt>Saturday:</dt>
+                <dd>10am-9pm</dd>
+                <dt>Sunday:</dt>
+                <dd>Closed</dd>
+              </dl>
+            </div>
           </div>
         </div>
       </div>
