--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <img src="images/placeholder-circle.svg" alt="main-logo">
     <h1>Beau's Bonbons</h1>
     <nav>
+      <input type="checkbox" class="nav-check" id="nav-check">
+      <label  class="nav-label" for="nav-check">
+        <img class="nav-open" src="images/nav-icon.svg" alt="Open Navigation">
+        <img class="nav-close" src="images/nav-icon-close.svg" alt="Close Navigation">
+      </label>
       <ul class="nav">
         <li><a href="#home">Home</a></li>
         <li><a href="#products">Products</a></li>
