--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Confectionary Website Prototype</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lobster|Playfair+Display|Slabo+27px" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lobster|Playfair+Display" rel="stylesheet">
 </head>
 <body>
 
